--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ mypy = "^1.5.1"
 pandas-stubs = "^2.1.1.230928"
 tiktoken = "^0.5.1"
 tqdm = "^4.66.1"
+pydantic = "^2.4.2"
+pypdf2 = "^3.0.1"
+transformers = "^4.34.0"
+nltk = "^3.8.1"
 
 
 [build-system]
